src/objects/StudentCompletionTask__c.object
<CustomObject>
    <description>Custom object to manage student assessments, requirements, and zero CU tasks by recordtype.</description>
    <fields>
        <fullName>AcademicId__c</fullName>
        <description>The unique id that represents academic history in Banner. Required in order to update records from banner. Combination of the pidm-assessmentcode-termcode</description>
        <externalId>true</externalId>
        <label>Academic ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentStatus__c</fullName>
        <label>Assessment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Attempted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Recheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BannerActivityDate__c</fullName>
        <label>Banner Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>The type of task that is being complete. Example: Objective or Performance for Assessments.</description>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompetencyUnits__c</fullName>
        <label>Competency Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsMentor__c</fullName>
        <formula>If(Student__r.Mentor__r.PIDM__c = $User.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastFailedAssessmentAttemptDate__c</fullName>
        <description>The date of the most recent failed objective assessment attempt.</description>
        <label>Last Failed Assessment Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberFailedAssessmentAttempts__c</fullName>
        <description>Contains a count of the number of times a student has failedthe objective assessment for the course.</description>
        <label>Number of Failed Assessment Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSCourseVersionID__c</fullName>
        <description>related pams course version id.</description>
        <label>PAMS Course Version ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAMSPK__c</fullName>
        <description>Primary key of WGUSALESFORCE&quot;.&quot;ACAD_HIST_ASSESSMENT&quot; table</description>
        <label>PAMS PK</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrerequisiteTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to establish task hierarchy if necessary</description>
        <inlineHelpText>Choose a prerequisite task, if any.</inlineHelpText>
        <label>Prerequisite Task</label>
        <referenceTo>StudentCompletionTask__c</referenceTo>
        <relationshipLabel>Subordinate Tasks</relationshipLabel>
        <relationshipName>SubordinateTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequirementComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requirement Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StudentPIDM__c</fullName>
        <label>Student PIDM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>StudentAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskDueDate__c</fullName>
        <description>Date and time this task is due or expires</description>
        <inlineHelpText>Enter the due date and time for this task.</inlineHelpText>
        <label>Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskStartDate__c</fullName>
        <description>Date and time a task is started</description>
        <inlineHelpText>Enter the data and time this task was started.</inlineHelpText>
        <label>Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskStreamId__c</fullName>
        <externalId>true</externalId>
        <label>TaskStream Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <label>Term Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourseCompletionTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Course Completion Task</label>
        <referenceTo>WGUCourseCompletionTask__c</referenceTo>
        <relationshipName>StudentCourseCompletionTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Completion Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>StudentPIDM__c</columns>
        <columns>Student__c</columns>
        <columns>AcademicId__c</columns>
        <columns>AssessmentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>meow</fullName>
        <columns>WGUCourseCompletionTask__c</columns>
        <columns>AssessmentStatus__c</columns>
        <columns>Student__c</columns>
        <columns>BannerActivityDate__c</columns>
        <columns>RequirementComplete__c</columns>
        <columns>Version__c</columns>
        <columns>TermCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>meow</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Student Task Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Completion Tasks</pluralLabel>
    <recordTypes>
        <fullName>ObjectiveAssessment</fullName>
        <active>false</active>
        <label>Objective Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>PerformanceAssessment</fullName>
        <active>false</active>
        <label>Performance Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>false</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZeroCUTask</fullName>
        <active>false</active>
        <label>Zero CU Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>